# brave-core-bot

./: .gitignore  .gitmodules  BEST-PRACTICES.md  CLAUDE.md  Makefile  README.md  SECURITY.md  STATE-MACHINE.md  WORKFLOW.md  check-prd-has-work.py  config.brave-core.json  config.example.json  pyproject.toml  reset-run-state.sh  run-state.example.json  run.sh  setup-schedules.sh  setup.sh  sync-best-practices.sh  sync-schedules.sh  sync-skills.sh
.claude/: CLAUDE.md
.claude/skills/: add_intermittent_tests.md  prd.md  prd_json.md
docs/: git-repository.md  learnable-patterns.md  progress-reporting.md  run-state-management.md  testing-requirements.md  workflow-committed.md  workflow-merged.md  workflow-pending.md  workflow-pushed.md  workflow-skipped-invalid.md  workflow-state-machine.md
docs/best-practices/: android.md  architecture.md  build-system.md  chromium-src-overrides.md  coding-standards-apis.md  coding-standards.md  (+9 more)
hooks/: pre-commit  pre-commit-bot-repo
scripts/: business-hours-elapsed.py  check-bot-prs.sh  check-can-approve.py  check-has-prd.sh  check-new-prs.sh  check-prd-has-work.py  check-signal-messages.sh  extract-pr-images.py  fetch-issue.sh  filter-issue-json.sh  filter-pr-reviews.sh  get-nightly-version.py  reset-run-state.sh  select-task.py  setup.sh  signal-notify.sh  sync-schedules.sh  timeout-tree.sh  top-crashers.py  trusted-reviewers.txt.example  update-prd-status.py  update-submodule.sh  view-schedules.sh  with-lock.sh
skills/: prd_bc_add_intermittent_tests.md
tests/: README.md  conftest.py  test-suite.sh  test_chunk_best_practices.py
(+36 files in other folders)
