[project]
name = "brave-dev-bot"
version = "0.1.0"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "."]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
